Changelog
=========

v0.11.0:
 - Forward compatible change in the application data
 - Check existence of counterparts OKPay account before accepting a handshake
 - Bug fixing
   * Consider only relevant exchanges when order average price is calculated
   * Support relative paths on --data-path

v0.10.1:
 - Disable _new order_ button when OKPay account balance is not available
 - Bug fixing
   * Compute right fee when funds are withdrawn

v0.10.0:
 - Show elapsed time since last mined block in status bar
 - Track OKPay monthly transference limits

v0.9.0:
 - Use snapshots to reduce time and space while saving state of running
   processes
 - Make wire protocol error conditions more specific
 - Automatic data migration from previous versions (discarding in-progress
   orders)
 - Bug fixing
   * Reduce CPU consumption of some UI animations

v0.8.1:
 - Show warnings and errors in the new order wizard
 - Bug fixing
   * Connection status was successful even when disconnected from bitcoin network
   * Fix setup wizard placement issues

v0.8.0:
 - Use a regtest instead of a testnet for integration tests
 - GUI redesign
 - Bug fixing
   * Fix overflow during wire protocol serialization

v0.7.0:
 - Trigger alarms on OKPay balance availability issues
 - Improve SOAP failure logging
 - Adapt setup wizard to Coinffeine Technical Preview

v0.6.0:
 - Filter not-started exchanges in the operations view
 - Add a splash screen shown on application launching
 - Add quote information in order submission form
 - Add a web faucet for OKPay mock
 - Add a simple fee summary in order submission form
 - Add a notification area in the UI for alarm reporting

v0.5.2:
 - Bug fixing
   * Avoid sending repeated orders to the order book and improve handling
     or such duplications

v0.5.1:
 - Bug fixing
   * Now OKPay Mock balances are updated successfully after payments

v0.5.0:
 - Support for market-price orders
 - Support concurrent exchanges for a single order