@@ -4,6 +4,7 @@ Changelog
 v0.11.0:
  - Forward compatible change in the application data
  - Check existence of counterparts OKPay account before accepting a handshake
+ - Make currency text fields indicate typing errors
  - Bug fixing
    * Consider only relevant exchanges when order average price is calculated
    * Support relative paths on --data-path
